--- a/static/css/hyde.css
+++ b/static/css/hyde.css
@@ -79,8 +79,10 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  /* font-family: "Abril Fatface", serif; */
+  font-family: "Menlo", sans-serif;
+  font-size: 2.75rem;
+  font-weight: normal;
 }
 
 /* Sidebar nav */
